<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/google_logo"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google_logo" />
    <TextView
        android:id="@+id/form_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/google_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/create_your_google_account"
        android:textColor="@color/black"
        android:textSize="20dp"/>


    <com.google.android.material.textfield.TextInputLayout
android:id="@+id/first_name_field"
    android:layout_width="190dp"
    android:layout_marginEnd="5dp"
        android:layout_marginTop="25dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/form_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/last_name_field"
android:hint="@string/first_name">
<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/first_name"
    android:inputType="text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_field"
        android:layout_width="190dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/first_name_field"
        android:hint="@string/last_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/username"
        app:suffixText="\@gmail.com">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/username_requirements_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/username_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/currnt_email"
        android:text="@string/username_requerments"/>

    <TextView
        android:id="@+id/currnt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/google_blue"
        app:layout_constraintTop_toBottomOf="@id/username_requirements_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password_field"
        android:text="@string/use_my_current_email_address_instead"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="190dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currnt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/confirm_field"
        android:hint="@string/password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_field"
        android:layout_width="190dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/currnt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/password_field"
        android:hint="@string/confirm">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/password_requirements_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/password_field"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/password_requirements_message"/>
    <CheckBox
        android:id="@+id/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/password_requirements_message"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/show_password"/>
    <TextView
        android:id="@+id/signIN_instead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="110dp"
        android:textStyle="bold"
android:textColor="@color/google_blue"
        android:text="@string/sign_in_instead"/>
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        android:textStyle="bold"
        android:text="@string/next"/>



</androidx.constraintlayout.widget.ConstraintLayout>